created animation panel and modularized code a bit

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
       <button id="selectBtn">Select</button>
       <button id="animateBtn">Animate</button>
       <button id="deleteBtn">Delete</button>
+      <button id="pauseBtn">Pause</button>
       <button id="undoBtn">Undo</button>
       <button id="redoBtn">Redo</button>
     </div>
   </div>
+  <div id="animationPanel"></div>
   <canvas id="canvas" width="900" height="600"></canvas>
   <script src="https://cdn.jsdelivr.net/npm/fabric@6.4.3/dist/index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
