groups working + group animation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <button id="drawBtn">Draw</button>
       <button id="selectBtn">Select</button>
       <button id="animateBtn">Animate</button>
+      <button id="groupBtn">Group</button>
       <button id="deleteBtn">Delete</button>
       <button id="pauseBtn">Pause</button>
       <button id="undoBtn">Undo</button>
