--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>AniMuse</title>
   <link rel="stylesheet" href="styles/canvas.css">
   <link rel="stylesheet" href="styles/animationPanel.css">
+  <link rel="stylesheet" href="styles/interactionPanel.css">
 </head>
 <body>
   <h3>AniMuse</h3>
@@ -39,6 +40,21 @@
       <!-- Animation entries will be rendered here -->
     </div>
   </div>
+  <div id="interactionPanel">
+    <div class="interaction-panel-header">
+      <h4>Interactions</h4>
+      <div class="display-controls">
+        <label for="displayInteractions">Display:</label>
+        <select id="displayInteractions">
+          <option value="order">Animation Order</option>
+          <option value="interactions">Animation Interactions</option>
+        </select>
+      </div>
+    </div>
+    <div id="interaction-entries">
+      <!-- Object entries will be rendered here -->
+    </div>
+  </div>
   <div id="editPromptModal" class="modal hidden">
     <div class="modal-content">
       <h3>Edit Animation Settings</h3>
@@ -53,7 +69,9 @@
       </div>
     </div>
   </div>
-  <canvas id="canvas" width="900" height="600"></canvas>
+  <div id="canvasWrapper">
+    <canvas id="canvas" width="1000" height="800"></canvas>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/fabric@6.4.3/dist/index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script type="module" src="js/main.js"></script>
