--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       <h3>Edit Animation Settings</h3>
       <div class="input-group">
         <label for="editPromptInput">Animation Prompt:</label>
-        <input id="editPromptInput" type="text" placeholder="birds, apples, or fix" />
-        <p class="input-help">Changes the animation behavior. Currently supports "birds", "apples", or "fix" (static, no animation).</p>
+        <input id="editPromptInput" type="text" placeholder="birds, apples, hop, or fix" />
+        <p class="input-help">Changes the animation behavior. Currently supports "birds", "apples", "hop" (up and down motion), or "fix" (static, no animation).</p>
       </div>
       <div class="modal-buttons">
         <button id="savePromptBtn">Save</button>
