ASR with some basic commands

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/canvas.css">
   <link rel="stylesheet" href="styles/animationPanel.css">
   <link rel="stylesheet" href="styles/interactionPanel.css">
+  <link rel="stylesheet" href="styles/speechRecognition.css">
 </head>
 <body>
   <h3>AniMuse</h3>
