Added tooltips + voice command keybind

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <label>Color <input type="color" id="colorPicker" value="#000000"></label>
     <label>Size <input type="range" id="sizePicker" min="1" max="40" value="4"></label>
     <div class="buttons">
-      <button id="drawBtn">Draw</button>
-      <button id="selectBtn">Select</button>
-      <button id="animateBtn">Animate</button>
-      <button id="groupBtn">Group</button>
-      <button id="deleteBtn">Delete</button>
-      <button id="pauseBtn">Pause</button>
-      <button id="undoBtn">Undo</button>
-      <button id="redoBtn">Redo</button>
+      <button id="drawBtn" title="Draw Mode (Ctrl/Cmd + B)">Draw</button>
+      <button id="selectBtn" title="Select Mode (Ctrl/Cmd + E)">Select</button>
+      <button id="animateBtn" title="Animate Selected (Ctrl/Cmd + M)">Animate</button>
+      <button id="groupBtn" title="Group Selected (Ctrl/Cmd + G)">Group</button>
+      <button id="deleteBtn" title="Delete Selected (Delete)">Delete</button>
+      <button id="pauseBtn" title="Pause Animations (Ctrl/Cmd + K)">Pause</button>
+      <button id="undoBtn" title="Undo (Ctrl/Cmd + Z)">Undo</button>
+      <button id="redoBtn" title="Redo (Ctrl/Cmd + Shift + Z)">Redo</button>
     </div>
   </div>
   <div id="animationPanel">
