Resizable canvas and collapsable panels

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <!-- Animation entries will be rendered here -->
     </div>
   </div>
+  <button class="panel-collapse-btn animation-collapse" title="Toggle Animation Panel"></button>
+
   <div id="interactionPanel">
     <div class="interaction-panel-header">
       <h4 class="panel-header">Interactions</h4>
@@ -58,6 +60,7 @@
       <!-- Object entries will be rendered here -->
     </div>
   </div>
+  <button class="panel-collapse-btn interaction-collapse" title="Toggle Interaction Panel"></button>
   <div id="editPromptModal" class="modal hidden">
     <div class="modal-content">
       <h3>Edit Animation Settings</h3>
