initial help button

--- a/index.html
+++ b/index.html
@@ -61,6 +61,87 @@
     </div>
   </div>
   <button class="panel-collapse-btn interaction-collapse" title="Toggle Interaction Panel"></button>
+  <button class="help-button" title="Help">?</button>
+  <div class="help-overlay">
+    <div class="help-content">
+      <button class="help-close">×</button>
+      <h2>Welcome to AniMuse!</h2>
+      
+      <div class="help-section">
+        <h3>Getting Started</h3>
+        <p>AniMuse is an interactive canvas where you can draw, animate, and bring your creativity to life. Here's how to get started:</p>
+        <ul>
+          <li>Use the <span class="keyboard-shortcut">Draw</span> tool to create shapes and lines</li>
+          <li>Select colors and brush sizes from the toolbar</li>
+          <li>Switch to <span class="keyboard-shortcut">Select</span> mode to modify existing objects</li>
+          <li>Group multiple objects using the <span class="keyboard-shortcut">Group</span> tool</li>
+        </ul>
+      </div>
+
+      <div class="help-section">
+        <h3>Creating Animations</h3>
+        <p>Turn your drawings into dynamic animations:</p>
+        <ul>
+          <li>Select an object or group</li>
+          <li>Click <span class="keyboard-shortcut">Animate</span> or press <span class="keyboard-shortcut">Ctrl/Cmd + M</span></li>
+          <li>Choose from animation types: birds, sway, or hop</li>
+          <li>Use <span class="keyboard-shortcut">Pause</span> to freeze all animations</li>
+        </ul>
+      </div>
+
+      <div class="help-section">
+        <h3>Animation Types & Interactions</h3>
+        <p>AniMuse offers several unique animation styles that can interact with each other:</p>
+        <ul>
+          <li><strong>Birds Animation:</strong> Objects move in flocking patterns, following and avoiding each other like a flock of birds</li>
+          <li><strong>Sway Animation:</strong> Objects gently swing back and forth, creating a peaceful pendulum motion</li>
+          <li><strong>Hop Animation:</strong> Objects bounce around the canvas, either individually or in groups</li>
+          <li><strong>Fix Animation:</strong> Creates a static animation that can be used in interactions</li>
+        </ul>
+        <p>Interactions:</p>
+        <ul>
+          <li>Bird-animated objects will flock together and avoid obstacles</li>
+          <li>Multiple swaying objects can create beautiful wave-like patterns</li>
+          <li>Hopping objects can be synchronized or randomized</li>
+          <li>Mix different animations to create complex, dynamic scenes</li>
+          <li>Use the Interaction Panel to view and manage how objects influence each other</li>
+        </ul>
+      </div>
+
+      <div class="help-section">
+        <h3>Managing Your Work</h3>
+        <p>Keep track of your animations and interactions:</p>
+        <ul>
+          <li>View all animations in the left panel</li>
+          <li>Manage object interactions in the right panel</li>
+          <li>Use <span class="keyboard-shortcut">Undo</span> (<span class="keyboard-shortcut">Ctrl/Cmd + Z</span>) and <span class="keyboard-shortcut">Redo</span> (<span class="keyboard-shortcut">Ctrl/Cmd + Shift + Z</span>) for corrections</li>
+          <li>Delete selected objects with the <span class="keyboard-shortcut">Delete</span> key</li>
+        </ul>
+      </div>
+
+      <div class="help-section">
+        <h3>Keyboard Shortcuts</h3>
+        <ul>
+          <li><span class="keyboard-shortcut">Ctrl/Cmd + B</span> - Draw Mode</li>
+          <li><span class="keyboard-shortcut">Ctrl/Cmd + E</span> - Select Mode</li>
+          <li><span class="keyboard-shortcut">Ctrl/Cmd + M</span> - Animate Selected</li>
+          <li><span class="keyboard-shortcut">Ctrl/Cmd + G</span> - Group Selected</li>
+          <li><span class="keyboard-shortcut">Ctrl/Cmd + K</span> - Pause Animations</li>
+        </ul>
+      </div>
+
+      <div class="help-section">
+        <h3>Tips & Tricks</h3>
+        <ul>
+          <li>Click and drag to select multiple objects</li>
+          <li>Double-click an animation to edit its settings</li>
+          <li>Use the panels' collapse buttons to maximize canvas space</li>
+          <li>Experiment with different animation combinations!</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
   <div id="editPromptModal" class="modal hidden">
     <div class="modal-content">
       <h3>Edit Animation Settings</h3>
