--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <ul>
           <li>Select an object or group</li>
           <li>Click <span class="keyboard-shortcut">Animate</span> or press <span class="keyboard-shortcut">Ctrl/Cmd + M</span></li>
-          <li>Choose from animation types: birds, sway, or hop</li>
+          <li>Tell Animuse in natural language how you want the object to animate (e.g. "have these circles fly around")</li>
           <li>Use <span class="keyboard-shortcut">Pause</span> to freeze all animations</li>
         </ul>
       </div>
@@ -98,13 +98,26 @@
           <li><strong>Hop Animation:</strong> Objects bounce around the canvas, either individually or in groups</li>
           <li><strong>Fix Animation:</strong> Creates a static animation that can be used in interactions</li>
         </ul>
-        <p>Interactions:</p>
+        <p>Interaction Types:</p>
         <ul>
-          <li>Bird-animated objects will flock together and avoid obstacles</li>
-          <li>Multiple swaying objects can create beautiful wave-like patterns</li>
-          <li>Hopping objects can be synchronized or randomized</li>
-          <li>Mix different animations to create complex, dynamic scenes</li>
-          <li>Use the Interaction Panel to view and manage how objects influence each other</li>
+          <li><strong>Avoid:</strong> Objects will act as a boundary to one another, creating dynamic avoidance patterns</li>
+          <li><strong>Orbit:</strong> Objects will circle around each other in orbital patterns, maintaining a consistent distance</li>
+          <li>Use the Interaction Panel to create and manage these relationships between animations</li>
+          <li>Combine multiple interaction types to create complex emergent behaviors</li>
+          <li>Interactions work across all animation types for endless creative possibilities</li>
+        </ul>
+      </div>
+
+      <div class="help-section">
+        <h3>Voice Commands</h3>
+        <p>Control AniMuse hands-free with voice commands:</p>
+        <ul>
+          <li>Click the microphone button in the toolbar to start voice control</li>
+          <li>Say "Hey Muse" for Animuse to start active listening</li>
+          <li>Select objects or groups and tell Animuse how to animate them (e.g. "make this house hop around")</li>
+          <li>Say "Pause animations" or "Resume animations" to control playback</li>
+          <li>The status indicator in the bottom-right shows when voice control is active</li>
+          <li>Command feedback appears at the top of the screen to confirm your instructions</li>
         </ul>
       </div>
 
@@ -133,9 +146,8 @@
       <div class="help-section">
         <h3>Tips & Tricks</h3>
         <ul>
-          <li>Click and drag to select multiple objects</li>
-          <li>Double-click an animation to edit its settings</li>
-          <li>Use the panels' collapse buttons to maximize canvas space</li>
+          <li>Shift click to select multiple objects</li>
+          <li>Use the panels' collapse buttons to minimize distractions</li>
           <li>Experiment with different animation combinations!</li>
         </ul>
       </div>
